--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+ 
 	<modelVersion>4.0.0</modelVersion>
-
+ 
 	<!-- Anypoint Org / Business Group ID -->
 	<groupId>0c4b9b4a-4a19-4ade-a03d-b1c28cb18fe5</groupId>
 	<artifactId>demo-cicd</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
-
+ 
 	<name>demo-cicd</name>
-
+ 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<app.runtime>4.9.0</app.runtime>
-		<mule.maven.plugin.version>4.3.0</mule.maven.plugin.version>
+ 
+		<!-- Mule runtime (CloudHub 2.0 Free Trial – edge/java17) -->
+		<app.runtime>4.10.1</app.runtime>
+ 
+		<!-- Mule Maven plugin -->
+		<mule.maven.plugin.version>4.1.1</mule.maven.plugin.version>
+ 
 		<!-- CH2 deploy props -->
 		<deployment.env>Sandbox</deployment.env>
 		<deployment.target>Cloudhub-US-East-2</deployment.target>
-		
 	</properties>
+ 
 	<!-- Exchange Maven Facade repositories (for dependencies) -->
 	<repositories>
 		<repository>
@@ -63,11 +70,6 @@
 		</repository>
 	</distributionManagement>
  
-	
-	
-	
-	
-
 	<build>
 		<plugins>
 			<plugin>
@@ -75,12 +77,13 @@
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>3.2.0</version>
 			</plugin>
+ 
+			<!-- Mule CloudHub 2.0 Deployment -->
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
-				
 				<configuration>
 					<classifier>mule-application</classifier>
  
@@ -106,23 +109,21 @@
 						</deploymentSettings>
 					</cloudhub2Deployment>
 				</configuration>
-				
-				
 			</plugin>
 		</plugins>
 	</build>
-
+ 
 	<dependencies>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
-			<version>1.10.3</version>
+			<version>1.10.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.2.5</version>
+			<version>1.2.4</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
